--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -161,5 +161,16 @@ div#wrapperHeader div#header img {
     border-radius: 30px;
 }
 
+#personvern_tekst {
+    position: relative;
+    overflow-y: auto;
+    max-height: 400px;
+    display: table;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+    line-height:1.5em;
+}
 
 
