--- a/recruiter/apps/hr/templates/hr/leader_view.html
+++ b/recruiter/apps/hr/templates/hr/leader_view.html
@@ -1,26 +1,60 @@
-{% extends 'hr/basefile-styling.html' %}
-
-{% block base %}
-
+{% extends 'hr/leader_base.html' %}
+{% block first %}
 {% for candidate in candidates %}
+<div class="candidateView">
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<h4>{{ candidate.user.get_full_name }}</h4>
+				<p>{{ candidate.hr_comment }}</p>
+				<form action="{% url 'hr:leaderCV' %}" method="get" style="display: inline">
+					{% csrf_token %}
+					<input type="hidden" name="candidate_cv" value="{{ candidate.cv }}">
+					<button type="submit" class="btn btn-default btn-sm" id="see_cv">
+						<span class="glyphicon glyphicon-download-alt"></span>
+						Se CV
+					</button>
+				</form>
+				<br/>
+				<br/>
+				<form class="form-horizontal" method="post" enctype="multipart/form-data">
+					{% csrf_token %}
+					<input id="id_candidate" type="hidden" name="id_candidate" value="{{ candidate.user.id }}">
+					<input id="comment" name="comment" type="text" placeholder="Kommentar">
+					<br/>
+					<br/>
+					<button id="butt_green" name="accept" type="submit" class="btn btn-success">Aktuell kandidat</button>
+					<button id="butt_green" name="other_leader" type="submit" class="btn btn-success">Aktuell for andre</button>
+				</form>
+					<br/>
+					<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#leaderReject{{ candidate.user.id }}" style="display: inline" id="not_applicable">Ikke aktuell kandidat</button>
+			</div>
+		</div>
+	</div>
+</div>
+{% include 'hr/leader-reject-modal.html' %}
+{% endfor %}
+{% endblock %}
+
+{% block second %}
+
+{% for candidate in approved %}
 <div class="candidateProfile">
 	<div class="container">
-		<h5>{{ candidate.user.get_full_name }}</h5>
-		<p>{{ candidate.hr_comment }}</p>
-		<form action="{% url 'hr:leaderCV' %}" method="get" style="display: inline">
-			{% csrf_token %}
-			<input type="hidden" name="candidate_cv" value="{{ candidate.cv }}">
-			<button type="submit" class="btn btn-default btn-sm" id="see_cv">
-				<span class="glyphicon glyphicon-download-alt"></span>
-				Se CV
-			</button>
-		</form>
-		<form class="form-horizontal" method="post" enctype="multipart/form-data">
-			{% csrf_token %}
-			<input id="id_candidate" type="hidden" name="id_candidate" value="{{ candidate.user.id }}">
-			<button id="butt_green" name="accept" type="submit" class="btn btn-success">Godta kandidat</button>
-			<button id="butt_green" name="reject" type="submit" class="btn btn-success">Avslå kandidat</button>
-		</form>
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<h4>{{ candidate.user.get_full_name }}</h4>
+				<p>{{ candidate.hr_comment }}</p>
+				<form action="{% url 'hr:leaderCV' %}" method="get" style="display: inline">
+					{% csrf_token %}
+					<input type="hidden" name="candidate_cv" value="{{ candidate.cv }}">
+					<button type="submit" class="btn btn-default btn-sm" id="see_cv">
+						<span class="glyphicon glyphicon-download-alt"></span>
+						Se CV
+					</button>
+				</form>
+			</div>
+		</div>
 	</div>
 </div>
 {% endfor %}
