Tipsboksen er nå laget. Mulig å registrere kandidater, tipse om kandidater osv. Kandidaten kan også registreres som profesjonell

--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -175,4 +175,10 @@ div#wrapperHeader div#header img {
     line-height:1.5em;
 }
 
+#kand_personalia {
+
+    width: 100%;
+    border-top: solid #008789 1px;
+    height: auto;
+}
 
