--- a/recruiter/apps/hr/templates/hr/new-candidate-modal.html
+++ b/recruiter/apps/hr/templates/hr/new-candidate-modal.html
@@ -22,7 +22,7 @@
                         </div>
 
                          <div class="thumbnail" id="regUserDiv">
-                             <textarea id="regUserText" name="welcome_text">
+                             <textarea id="send_about_candidate" name="welcome_text">
                              </textarea>
                          </div>
 
