--- a/static/hr/style.css
+++ b/static/hr/style.css
@@ -43,14 +43,39 @@
     border: 30px transparent;
 }
 
-#see_cv, #give_rejection, #send_leader, #send_hr {
+#give_rejection, #send_leader, #send_hr {
 
     width: 110px;
     height: 30px;
     margin-top: 5px;
     border-radius: 30px;
-   
+}
 
+#give_rejection {
+
+    width: 110px;
+    height: 30px;
+    border-radius: 30px;
+    margin-top: 5px;
+}
+
+#send_new_leader {
+
+    width: 120px;
+    height: 30px;
+    border-radius: 30px;
+    margin-top: 5px;
+}
+
+#see_cv {
+
+    border-radius: 50px;
+    height: 30px;
+    /*padding: 5px 20px;*/
+    margin-top: 5px;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 12px;
 }
 
 #unflagged_candidate {
@@ -72,17 +97,10 @@
 
 }
 
-#send_new_leader {
-
-     width: 120px;
-     height: 30px;
-     margin-top: 5px;
-}
-
 #candidateInfoDiv {
     font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
-    font-size: 10;
+    font-size: 10px;
     overflow: scroll;
     height: 60px;
     width: 150px;
@@ -98,7 +116,7 @@
 }
 
 #hr_login{
-    content: center;
+
     width: 150%;
     font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
@@ -163,7 +181,7 @@
 }
 /*------------inne på HR--------------*/
 
-#vis_cv, #give_rejection, #send_leader, #send_hr, #sent_to_leader{
+#vis_cv, #give_rejection, #send_leader, #send_hr, #sent_to_leader {
     border-radius: 50px;
     /*padding: 5px 20px;*/
     border-width: 1px;
@@ -179,7 +197,6 @@
     font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
     font-size: 10px;
-    color: 
 }
 
 #her_detaljer{
@@ -211,7 +228,21 @@
     border-radius: 30px;
 }
 
-#butt_paminnelse{
+#butt_paminnelse {
+
+    background-color: #FFFFFF;
+    color: #008789;
+    border: solid #C0C0C0 1px;
+    border-radius: 50px;
+    /*padding: 5px 20px;*/
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+
+/*#butt_paminnelse{
     font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
     font-size: 13px;
@@ -219,12 +250,12 @@
     background-color: #FFFFFF;
     color: #008789;
     border: solid #C0C0C0 1px;
-    padding: 13px 20px;
+    padding: 8px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     border-radius: 30px;
-}
+}*/
 
 
 
