--- a/recruiter/apps/hr/static/hr/style.css
+++ b/recruiter/apps/hr/static/hr/style.css
@@ -109,6 +109,26 @@
     border-radius: 20px;
 }
 
+.candidateMailDiv {
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 200;
+    font-size: 12px;
+    overflow: scroll;
+    height: 120px;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+
+.candidateDetailWhyDiv {
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 200;
+    font-size: 12px;
+    overflow: scroll;
+    height: auto;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+
 #sent_to_leader, #sent_to_leader_date {
 
     /*width: 50%;
@@ -317,6 +337,14 @@
     border: 30px transparent;
 }
 
+.tips_mail_custom {
+
+    width: 100%;
+    height: 120px;
+    border-radius: 10px;
+    border: 30px transparent;
+}
+
 #check_label {
 
     font-weight: 400;
@@ -328,10 +356,15 @@
     width: 70%;
 }
 
+#mail_div_tips {
+
+    height:150px;
+}
+
 #div_mail_bottom {
 
     width: 100%;
-    border-top: solid #717171 1px;
+    border-top: solid #008789 1px;
     height: auto;
 }
 
@@ -339,6 +372,7 @@
 
     width: 70%;
 }
+
 
 
 /*#butt_paminnelse{
