--- a/recruiter/apps/hr/templates/hr/base.html
+++ b/recruiter/apps/hr/templates/hr/base.html
@@ -21,9 +21,9 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
 
-                        <span class="icon-bar" style="background-color: #FBFAFA;"></span>
-                        <span class="icon-bar" style="background-color: #FBFAFA;"></span>
-                        <span class="icon-bar" style="background-color: #FBFAFA;"></span>
+                        <span class="icon-bar" style="background-color: #000000;"></span>
+                        <span class="icon-bar" style="background-color: #000000;"></span>
+                        <span class="icon-bar" style="background-color: #000000;"></span>
 
                     </button>
                     <a class="navbar-brand" href="">DNB Recruiter</a>
@@ -61,13 +61,40 @@
 
                 <ul class="nav navbar-nav">
 
-					<li id="untreated" class="active">
-					<!-- <li> -->
+                    <li class="">
+                        <a href="{% url 'hr:tips' %}"
+                                {% if view.id == 4 %}
+                                    style="color: #ba4823"
+                                {% endif %} id="navigasjons_bar">
 
+                            <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Tips ({{ query_set.1.4 }})
+                        </a>
+
+                    </li>
+
+                    <li class="">
+                        <a href="{% url 'hr:unregistered' %}"
+                                {% if view.id == 5 %}
+                                    style="color: #ba4823"
+                                {% endif %} id="navigasjons_bar">
+
+                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span> Ikke registrert ({{ query_set.1.5 }})
+                        </a>
+                    </li>
+
+                    <li class="">
+
+                        <a href="">
+
+                        </a>
+
+                    </li>
+
+					<li id="untreated" class="active">
 
                         <a href="{% url 'hr:index' %}" 
                                 {% if view.id == 0 %}
-                                    style="color: #00ba98"
+                                    style="color: #ba4823"
                                 {% endif %} id="navigasjons_bar">
                             <span class="glyphicon glyphicon-alert" aria-hidden="true"></span> Ubehandlet ({{ query_set.1.0 }})
                         </a>
@@ -76,7 +103,7 @@
                     <li class="">
                         <a href="{% url 'hr:inProcess' %}"
                                 {% if view.id == 1 %}
-                                    style="color: #00ba98"
+                                    style="color: #ba4823"
                                 {% endif %} id="navigasjons_bar">
 
                             <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> I prosess ({{ query_set.1.1 }})
@@ -87,7 +114,7 @@
                     <li class="">
                         <a href="{% url 'hr:approved' %}"
                             {% if view.id == 2 %}
-                                style="color: #00ba98"
+                                style="color: #ba4823"
                             {% endif %} id="navigasjons_bar">
 
                             <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Godkjent ({{ query_set.1.2 }})
@@ -97,7 +124,7 @@
                     <li class="">
                         <a href="{% url 'hr:rejected' %}"
                                 {% if view.id == 3 %}
-                                    style="color: #00ba98"
+                                    style="color: #ba4823"
                                 {% endif %} id="navigasjons_bar">
 
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Avslått ({{ query_set.1.3 }})
