--- a/recruiter/apps/hr/templates/hr/tips-detail-base.html
+++ b/recruiter/apps/hr/templates/hr/tips-detail-base.html
@@ -4,10 +4,10 @@
 <h6>{{ candidate.text }}</h6>
 <h6>{% if candidate.is_proff %}
 
-        Profesjonell <span class="glyphicon glyphicon-ok"></span>
+        Erfaren <span class="glyphicon glyphicon-ok"></span>
     {% else %}
 
-        Ikke profesjonell <span class="glyphicon glyphicon-remove"></span>
+        Nyutdannet/student <span class="glyphicon glyphicon-education"></span>
 
     {% endif %}
 </h6>
