--- a/recruiter/apps/hr/templates/hr/home-view.html
+++ b/recruiter/apps/hr/templates/hr/home-view.html
@@ -41,7 +41,17 @@
                     </div>
                 </div>
                 <br/>
-                <h4 id="home_reg_header">Informasjon om tipset</h4>
+
+                <h4 id="home_reg_header">Info om tipser</h4>
+                <div id="kand_personalia">
+
+                    <br id="small_space"/>
+                    <input placeholder="Din mail" id="home_candemail" type="email" class="form-control" name="mail_from" value=""/>
+
+                </div>
+
+                <br/>
+                <h4 id="home_reg_header">Info om tipset</h4>
 
                 <div id="kand_personalia">
 
@@ -49,8 +59,6 @@
                         <div class="col-sm-offset-0 col-sm-10">
 
                             <br id="small_space"/>
-                            <input placeholder="Din mail" id="home_candemail" type="email" class="form-control" name="mail_from" value=""/>
-                            <br/>
                             <input type="checkbox" name="is_proff" id="proff"> <label id="check_label">Kandidaten er nyutdannet/student</label>
                             <br/>
                             <br id="small_space"/>
@@ -70,16 +78,13 @@
 
                 </div>
 
-                <br/>
-                <h4 id="home_reg_header">Kort kommentar</h4>
-                <div id="kand_personalia">
-                    <br id="small_space"/>
-                    <label>Fortell oss om hvorfor du tipser om denne kandidaten:</label>
-                    <div class="thumbnail" id="comment_why_div">
-                        <textarea id="comment_why" name="comment_why">
-                        </textarea>
-                    </div>
+                <br id="small_space"/>
+                <label>Fortell oss om hvorfor du tipser om denne kandidaten:</label>
+                <div class="thumbnail" id="comment_why_div">
+                    <textarea id="comment_why" name="comment_why">
+                    </textarea>
                 </div>
+
 
                 <!--<input type="checkbox" name="is_contact" id="is_contact"> <labe id="check_label">Jeg har vært i kontakt med kandidaten</labe>-->
 
