--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -2,6 +2,20 @@ body{
 
 }
 
+#back_picture{
+    width: 100%;
+    height: 50vh;
+}
+
+#mid_line{
+   margin-top: 10vh;
+   position: relative;
+}
+
+#wrap{
+    position: relative;
+}
+
 #regint{
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif*/;
 	font-family: "Segoe UI",Arial,sans-serif;
@@ -24,12 +38,52 @@ body{
 	font-weight: 300;
 }
 
-.panel-heading{
-	font-family: "Segoe UI",Arial,sans-serif;
-	font-size: 18px;
-	font-weight: 400;
+.panel-heading {
+    font-family: "Segoe UI", Arial, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+
 }
 
+.panel-body{
+    background-color: #008789;
+    float: left;
+    position: absolute;
+    left: 20vh;
+    right: 20vh;
+    top: 10vh;
+    margin-bottom: 100px;
+    float: right;
+    max-width: 80vh;
+    margin: auto;
+    display: block;
+    padding-top: 0px;
+    color: #fcfcfc;
+
+}
+
+
+#personvern{
+    padding-top: 15%;
+}
+
+#personvern a{
+    text-decoration: underline;
+}
+
+.control-label{
+    color: white;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-size: 12px;
+    font-weight: 50;
+}
+
+#usboks{
+    color: #fff;
+    font-weight: normal;
+    max-width: 200vh;
+
+}
 /*#registrerknapp{
 	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;*/
@@ -46,25 +100,28 @@ body{
     border-radius: 30px;
 }*/
 #registrer_interesse{
-	content: center;
-	width: 150%;
 	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 30px;
 	line-height: 0.1;
-    background-color: #FFFFFF;
-    color: #008789;
-    text-indent: 230px;
+    color: #fff;
+    position: absolute;
+    float: left;
+    top: 35vh;
+    left: 5vh;
+    background-color: #008789;
+    padding: 10px;
 }
 #usboks1{
 	content: center;
-	width: 150%;
 	font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
 	font-size: 11px;
-	line-height: 0.1;
-    background-color: #FFFFFF;
+	line-height: 0.5;
+    background-color: #008789;
     color: #000000;
+    max-width: 90vh;
+
 }
 
 #inputfield{
@@ -139,8 +196,8 @@ body{
 
 div#wrapperHeader {
  width: 50%;
- height: 110px; 
- background:url(dnblogo.png) no-repeat; 
+ height: 110px;
+ background:url(dnblogo.png) no-repeat;
  text-align:right;
 }
 
@@ -151,8 +208,8 @@ div#wrapperHeader div#header {
 }
 
 div#wrapperHeader div#header img {
- width: 200%; 
- height: 100px; 
+ width: 200%;
+ height: 100px;
  margin: 0 auto;
 }
 
@@ -182,3 +239,36 @@ div#wrapperHeader div#header img {
     height: auto;
 }
 
+#prefilled_text {
+    margin-left: 15%;
+    margin-right: 5%;
+}
+
+.form-horizontal{
+/*    float: right;
+    margin-left: 30vh;
+    margin-right: 5vh;*/
+}
+
+#upload_image{
+    width: 25vh;
+    height: 25vh;
+    display: block;
+    margin: auto;
+    float: center;
+    margin-top: 5vh;
+}
+
+.form_prefilled{
+    max-width: 20vh;
+}
+
+.input{
+    color: black;
+    padding: 0px;
+    font-size: 12px;
+}
+
+.row{
+    padding-top: 6px;
+}
