--- a/recruiter/apps/candidate/templates/candidate/terms.html
+++ b/recruiter/apps/candidate/templates/candidate/terms.html
@@ -3,7 +3,7 @@
 		<div class="modal-content" id="omriss_mail">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h3 id="home_reg_header">Privacy Policy</h3>
+				<h3 id="home_reg_header">Personvernsærklæring</h3>
 			</div>
 			<div class="modal-body" id="personvern_tekst">
 				{% csrf_token %}
