--- a/recruiter/apps/hr/templates/hr/home-view.html
+++ b/recruiter/apps/hr/templates/hr/home-view.html
@@ -14,7 +14,7 @@
 
         <div class="modal-header">
 
-            <h3 id="home_reg_header">Registrer kandidat</h3>
+            <h3 id="home_reg_header">Registrer Tips</h3>
 
         </div>
         <div class="modal-body">
