--- a/recruiter/apps/candidate/templates/candidate/register.html
+++ b/recruiter/apps/candidate/templates/candidate/register.html
@@ -14,7 +14,7 @@
 				</div>
 
 				<!-- GREEN BOX -->
-				<div class="panel-body">
+				<div class="panel-body" id="panel_body_register">
 
 					<!-- UPPER HALF-->
 					<img src="/static/candidate/75_prosent.png" id="upload_image">
