--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -29,7 +29,7 @@ body{
 	/*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
 	font-family: "Segoe UI",Arial,sans-serif;
 	font-size: 15px;
-	font-weight: 470;
+	font-weight: 400;
 }
 
 #fill{
@@ -45,7 +45,7 @@ body{
 
 }
 
-.panel-body{
+#panel_body_register{
     background-color: #008789;
     float: left;
     position: absolute;
@@ -75,7 +75,7 @@ body{
     color: white;
     font-family: "Segoe UI",Arial,sans-serif;
     font-size: 12px;
-    font-weight: 50;
+    font-weight: 100;
 }
 
 #usboks{
