--- a/recruiter/apps/hr/templates/hr/base.html
+++ b/recruiter/apps/hr/templates/hr/base.html
@@ -30,10 +30,23 @@
                 </div>
                 <div class="navbar-header">
 
-                    <a id="#user_header" class="navbar-brand" href="">{{ user.get_full_name }}</a>
+                    <a id="#user_header" class="navbar-brand" href="">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                        &nbsp;
+                        {{ user.get_full_name }}
+                    </a>
 
                 </div>
-                <ul class="nav navbar-nav navbar-left">
+
+                <ul class="nav navbar-nav navbar-right" style="margin-right: 5px">
+                    <li class="">
+                        <a href="{% url 'hr:logout' %}" id="navigasjons_bar">
+                            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logg ut
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
                     <li class="">
 						<a data-toggle="modal" data-target="#AddCandModal" id="navigasjons_bar">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Ny kandidat
@@ -47,12 +60,6 @@
 
 
         <div class="container-field">
-
-            <script> $(document).ready(function () {
-                $(".nav li").removeClass("active");//this will remove the active class from
-                                     //previously active menu item
-                $('#untreated').addClass('active'); });
-            </script>
 
 
             <!-- Items on the navigation bar -->
@@ -68,16 +75,10 @@
                                 {% endif %} id="navigasjons_bar">
 
                             <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Tips ({{ query_set.1.4 }})
+                            &nbsp;
+                            &nbsp;
+                            &nbsp;
                         </a>
-
-                    </li>
-
-                    <li class="">
-
-                        <a href="">
-
-                        </a>
-
                     </li>
 
 					<li id="untreated" class="active">
@@ -131,13 +132,6 @@
                     <button type="submit" class="btn btn-default" id="butt">Søk</button>
                 </form>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="">
-                        <a href="{% url 'hr:logout' %}" id="navigasjons_bar">
-                            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logg ut
-                        </a>
-                    </li>
-                </ul>
 
             </div>
         </div>
